Update OS lab 5

--- a/os/labs/lab5/OS_lab_5/mainwindow.ui
+++ b/os/labs/lab5/OS_lab_5/mainwindow.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1190</width>
-    <height>637</height>
+    <width>1077</width>
+    <height>636</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1077</width>
+    <height>636</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1077</width>
+    <height>636</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -18,10 +30,15 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>180</y>
+      <y>110</y>
       <width>291</width>
       <height>71</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Start</string>
@@ -35,6 +52,11 @@
       <width>101</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="minimum">
      <number>10000</number>
@@ -51,6 +73,11 @@
       <width>161</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="currentIndex">
      <number>1</number>
@@ -90,10 +117,15 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>380</y>
+      <y>350</y>
       <width>181</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Kill</string>
@@ -103,10 +135,15 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>430</y>
+      <y>410</y>
       <width>181</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Suspend</string>
@@ -116,7 +153,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>340</y>
+      <y>310</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -127,7 +164,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Process:</string>
+     <string>Thread:</string>
     </property>
    </widget>
    <widget class="QComboBox" name="comboBox_thread_count">
@@ -139,11 +176,11 @@
       <height>31</height>
      </rect>
     </property>
-    <item>
-     <property name="text">
-      <string>1</string>
-     </property>
-    </item>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
     <item>
      <property name="text">
       <string>2</string>
@@ -157,6 +194,11 @@
     <item>
      <property name="text">
       <string>8</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>16</string>
      </property>
     </item>
    </widget>
@@ -218,10 +260,15 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>260</y>
+      <y>220</y>
       <width>291</width>
       <height>71</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Kill all</string>
@@ -231,10 +278,15 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>480</y>
+      <y>470</y>
       <width>181</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Resume</string>
@@ -245,9 +297,20 @@
      <rect>
       <x>440</x>
       <y>10</y>
-      <width>581</width>
-      <height>561</height>
+      <width>571</width>
+      <height>581</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="verticalScrollBarPolicy">
      <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -262,10 +325,10 @@
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="rowCount">
-     <number>1</number>
+     <number>2</number>
     </property>
     <property name="columnCount">
-     <number>8</number>
+     <number>4</number>
     </property>
     <attribute name="horizontalHeaderMinimumSectionSize">
      <number>144</number>
@@ -277,11 +340,12 @@
      <bool>false</bool>
     </attribute>
     <attribute name="verticalHeaderMinimumSectionSize">
-     <number>65</number>
+     <number>34</number>
     </attribute>
     <attribute name="verticalHeaderDefaultSectionSize">
-     <number>65</number>
+     <number>34</number>
     </attribute>
+    <row/>
     <row/>
     <column>
      <property name="text">
@@ -303,23 +367,8 @@
       <string>Time</string>
      </property>
     </column>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
    </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1190</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
