--- a/algorytmy i str danyh/labs/lab 6/ASD_lab6/mainwindow.ui
+++ b/algorytmy i str danyh/labs/lab 6/ASD_lab6/mainwindow.ui
@@ -229,7 +229,7 @@
      <bool>false</bool>
     </property>
     <property name="editTriggers">
-     <set>QAbstractItemView::NoEditTriggers</set>
+     <set>QAbstractItemView::DoubleClicked|QAbstractItemView::SelectedClicked</set>
     </property>
     <property name="rowCount">
      <number>1</number>
