--- a/algorytmy i str danyh/labs/lab 7/ASD_lab_7/mainwindow.ui
+++ b/algorytmy i str danyh/labs/lab 7/ASD_lab_7/mainwindow.ui
@@ -6,88 +6,132 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1063</width>
+    <height>676</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGraphicsView" name="graphicsView">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>290</y>
-      <width>256</width>
-      <height>192</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton_start">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>60</y>
-      <width>75</width>
-      <height>23</height>
+      <x>150</x>
+      <y>500</y>
+      <width>281</width>
+      <height>91</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Start</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>90</y>
-      <width>75</width>
-      <height>23</height>
+      <x>10</x>
+      <y>10</y>
+      <width>981</width>
+      <height>481</height>
      </rect>
     </property>
-    <property name="text">
-     <string>PushButton</string>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_3">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>120</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
-    <property name="text">
-     <string>PushButton</string>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_4">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>150</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
     </property>
-    <property name="text">
-     <string>PushButton</string>
+    <property name="rowCount">
+     <number>7</number>
     </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_5">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>180</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
+    <property name="columnCount">
+     <number>6</number>
     </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>147</number>
+    </attribute>
+    <attribute name="verticalHeaderDefaultSectionSize">
+     <number>64</number>
+    </attribute>
+    <row>
+     <property name="text">
+      <string>1024</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>4096</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>16384</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>65536</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>262144</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>1048576</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>4194304</string>
+     </property>
+    </row>
+    <column>
+     <property name="text">
+      <string>Bubble</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Selection</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Shell</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Quick</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Merge</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Counting</string>
+     </property>
+    </column>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -95,8 +139,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>21</height>
+     <width>1063</width>
+     <height>25</height>
     </rect>
    </property>
   </widget>
