--- a/kursova/code/OOP_kursova/mainwindow.ui
+++ b/kursova/code/OOP_kursova/mainwindow.ui
@@ -16,6 +16,12 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
   <property name="font">
    <font>
     <pointsize>12</pointsize>
@@ -39,8 +45,31 @@
       <pointsize>12</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"> QHeaderView::section{
+            border-top:1px solid #D8D8D8;
+            border-left:1px solid #D8D8D8;
+            border-right:1px solid #D8D8D8;
+            border-bottom: 1px solid #D8D8D8;
+            background-color: #b4b4b4;
+            padding:4px;
+        }
+        QTableCornerButton::section{
+            border-top:1px solid #D8D8D8;
+            border-left:1px solid #D8D8D8;
+            border-right:1px solid #D8D8D8;
+            border-bottom: 1px solid #D8D8D8;
+            background-color:white;
+        }</string>
+    </property>
     <property name="lineWidth">
      <number>1</number>
+    </property>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
     <property name="sizeAdjustPolicy">
      <enum>QAbstractScrollArea::AdjustToContents</enum>
@@ -49,7 +78,7 @@
      <bool>true</bool>
     </property>
     <property name="gridStyle">
-     <enum>Qt::CustomDashLine</enum>
+     <enum>Qt::SolidLine</enum>
     </property>
     <property name="cornerButtonEnabled">
      <bool>true</bool>
@@ -58,7 +87,7 @@
      <number>1</number>
     </property>
     <attribute name="horizontalHeaderVisible">
-     <bool>false</bool>
+     <bool>true</bool>
     </attribute>
     <attribute name="horizontalHeaderStretchLastSection">
      <bool>true</bool>
@@ -83,30 +112,72 @@
      <property name="toolTip">
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;yuhu&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
+     <property name="background">
+      <color>
+       <red>180</red>
+       <green>180</green>
+       <blue>180</blue>
+      </color>
+     </property>
     </column>
     <column>
      <property name="text">
       <string>Surname</string>
+     </property>
+     <property name="background">
+      <color>
+       <red>150</red>
+       <green>150</green>
+       <blue>150</blue>
+      </color>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Name</string>
      </property>
+     <property name="background">
+      <color>
+       <red>150</red>
+       <green>150</green>
+       <blue>150</blue>
+      </color>
+     </property>
     </column>
     <column>
      <property name="text">
       <string>Phone number</string>
+     </property>
+     <property name="background">
+      <color>
+       <red>150</red>
+       <green>150</green>
+       <blue>150</blue>
+      </color>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Subscription type</string>
      </property>
+     <property name="background">
+      <color>
+       <red>150</red>
+       <green>150</green>
+       <blue>150</blue>
+      </color>
+     </property>
     </column>
     <column>
      <property name="text">
       <string>Duration</string>
+     </property>
+     <property name="background">
+      <color>
+       <red>150</red>
+       <green>150</green>
+       <blue>150</blue>
+      </color>
      </property>
     </column>
    </widget>
