--- a/kursova/code/OOP_kursova/mainwindow.ui
+++ b/kursova/code/OOP_kursova/mainwindow.ui
@@ -31,22 +31,41 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>10</y>
-      <width>701</width>
-      <height>411</height>
+      <x>70</x>
+      <y>20</y>
+      <width>611</width>
+      <height>421</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
+    <property name="currentIndex">
+     <number>0</number>
     </property>
-    <property name="styleSheet">
-     <string notr="true"> QHeaderView::section{
+    <widget class="QWidget" name="page">
+     <widget class="QTableWidget" name="tableWidget">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>740</width>
+        <height>600</height>
+       </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>740</width>
+        <height>500</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"> QHeaderView::section{
             border-top:1px solid #D8D8D8;
             border-left:1px solid #D8D8D8;
             border-right:1px solid #D8D8D8;
@@ -61,125 +80,291 @@
             border-bottom: 1px solid #D8D8D8;
             background-color:white;
         }</string>
-    </property>
-    <property name="lineWidth">
-     <number>1</number>
-    </property>
-    <property name="verticalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOff</enum>
-    </property>
-    <property name="horizontalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOff</enum>
-    </property>
-    <property name="sizeAdjustPolicy">
-     <enum>QAbstractScrollArea::AdjustToContents</enum>
-    </property>
-    <property name="showGrid">
-     <bool>true</bool>
-    </property>
-    <property name="gridStyle">
-     <enum>Qt::SolidLine</enum>
-    </property>
-    <property name="cornerButtonEnabled">
-     <bool>true</bool>
-    </property>
-    <property name="rowCount">
-     <number>1</number>
-    </property>
-    <attribute name="horizontalHeaderVisible">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="horizontalHeaderStretchLastSection">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="verticalHeaderVisible">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="verticalHeaderCascadingSectionResizes">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="verticalHeaderMinimumSectionSize">
-     <number>45</number>
-    </attribute>
-    <attribute name="verticalHeaderDefaultSectionSize">
-     <number>45</number>
-    </attribute>
-    <row/>
-    <column>
-     <property name="text">
-      <string>№</string>
-     </property>
-     <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;yuhu&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-     <property name="background">
-      <color>
-       <red>180</red>
-       <green>180</green>
-       <blue>180</blue>
-      </color>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Surname</string>
-     </property>
-     <property name="background">
-      <color>
-       <red>150</red>
-       <green>150</green>
-       <blue>150</blue>
-      </color>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Name</string>
-     </property>
-     <property name="background">
-      <color>
-       <red>150</red>
-       <green>150</green>
-       <blue>150</blue>
-      </color>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Phone number</string>
-     </property>
-     <property name="background">
-      <color>
-       <red>150</red>
-       <green>150</green>
-       <blue>150</blue>
-      </color>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Subscription type</string>
-     </property>
-     <property name="background">
-      <color>
-       <red>150</red>
-       <green>150</green>
-       <blue>150</blue>
-      </color>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Duration</string>
-     </property>
-     <property name="background">
-      <color>
-       <red>150</red>
-       <green>150</green>
-       <blue>150</blue>
-      </color>
-     </property>
-    </column>
+      </property>
+      <property name="lineWidth">
+       <number>1</number>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="sizeAdjustPolicy">
+       <enum>QAbstractScrollArea::AdjustToContents</enum>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="showGrid">
+       <bool>true</bool>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::SolidLine</enum>
+      </property>
+      <property name="cornerButtonEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="rowCount">
+       <number>1</number>
+      </property>
+      <attribute name="horizontalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderCascadingSectionResizes">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>45</number>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>45</number>
+      </attribute>
+      <row/>
+      <column>
+       <property name="text">
+        <string>№</string>
+       </property>
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;yuhu&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>180</red>
+         <green>180</green>
+         <blue>180</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Surname</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Name</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Phone number</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Subscription type</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Duration</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="page_2">
+     <widget class="QTableWidget" name="tableWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>740</width>
+        <height>500</height>
+       </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>740</width>
+        <height>500</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"> QHeaderView::section{
+            border-top:1px solid #D8D8D8;
+            border-left:1px solid #D8D8D8;
+            border-right:1px solid #D8D8D8;
+            border-bottom: 1px solid #D8D8D8;
+            background-color: #b4b4b4;
+            padding:4px;
+        }
+        QTableCornerButton::section{
+            border-top:1px solid #D8D8D8;
+            border-left:1px solid #D8D8D8;
+            border-right:1px solid #D8D8D8;
+            border-bottom: 1px solid #D8D8D8;
+            background-color:white;
+        }</string>
+      </property>
+      <property name="lineWidth">
+       <number>1</number>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="sizeAdjustPolicy">
+       <enum>QAbstractScrollArea::AdjustToContents</enum>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::CurrentChanged|QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
+      </property>
+      <property name="showGrid">
+       <bool>true</bool>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::SolidLine</enum>
+      </property>
+      <property name="cornerButtonEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="rowCount">
+       <number>1</number>
+      </property>
+      <attribute name="horizontalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderCascadingSectionResizes">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>45</number>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>45</number>
+      </attribute>
+      <row/>
+      <column>
+       <property name="text">
+        <string>№</string>
+       </property>
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;yuhu&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>180</red>
+         <green>180</green>
+         <blue>180</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Surname</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Name</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Phone number</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Subscription type</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Duration</string>
+       </property>
+       <property name="background">
+        <color>
+         <red>150</red>
+         <green>150</green>
+         <blue>150</blue>
+        </color>
+       </property>
+      </column>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -195,6 +380,9 @@
     <property name="title">
      <string>Table</string>
     </property>
+    <addaction name="actionBack_to_table"/>
+    <addaction name="actionAdd"/>
+    <addaction name="actionEdit_table"/>
     <addaction name="actionRead_from_file"/>
     <addaction name="actionWrite_to_file"/>
    </widget>
@@ -207,11 +395,6 @@
    <addaction name="menuActions"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionSort">
-   <property name="text">
-    <string>Sort</string>
-   </property>
-  </action>
   <action name="actionRead_from_file">
    <property name="text">
     <string>Read from file</string>
@@ -220,6 +403,27 @@
   <action name="actionWrite_to_file">
    <property name="text">
     <string>Write to file</string>
+   </property>
+  </action>
+  <action name="actionEdit_table">
+   <property name="text">
+    <string>Edit table</string>
+   </property>
+  </action>
+  <action name="actionBack_to_table">
+   <property name="text">
+    <string>Back to table</string>
+   </property>
+   <property name="visible">
+    <bool>false</bool>
+   </property>
+  </action>
+  <action name="actionAdd">
+   <property name="text">
+    <string>Add</string>
+   </property>
+   <property name="visible">
+    <bool>false</bool>
    </property>
   </action>
  </widget>
