--- a/os/labs/lab5/OS_lab_5/mainwindow.ui
+++ b/os/labs/lab5/OS_lab_5/mainwindow.ui
@@ -69,7 +69,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>530</y>
+      <y>520</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -206,7 +206,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>530</y>
+      <y>520</y>
       <width>171</width>
       <height>41</height>
      </rect>
@@ -470,6 +470,24 @@
     </property>
     <property name="text">
      <string>Semaphor</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>570</y>
+      <width>341</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
