--- a/os/labs/lab5/OS_lab_5/mainwindow.ui
+++ b/os/labs/lab5/OS_lab_5/mainwindow.ui
@@ -30,9 +30,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>140</y>
-      <width>291</width>
-      <height>71</height>
+      <y>210</y>
+      <width>211</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -260,9 +260,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>220</y>
-      <width>291</width>
-      <height>71</height>
+      <y>260</y>
+      <width>211</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -457,8 +457,8 @@
    <widget class="QRadioButton" name="radioButton_semaphor">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>90</y>
+      <x>190</x>
+      <y>120</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -488,6 +488,24 @@
     </property>
     <property name="readOnly">
      <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_winMutex">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>150</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Win Mutex</string>
     </property>
    </widget>
   </widget>
