--- a/algorytmy i str danyh/labs/lab 10/ASD_lab10/mainwindow.ui
+++ b/algorytmy i str danyh/labs/lab 10/ASD_lab10/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>462</height>
+    <width>753</width>
+    <height>593</height>
    </rect>
   </property>
   <property name="font">
@@ -160,8 +160,8 @@
    <widget class="QPushButton" name="pushButton_clear">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>370</y>
+      <x>520</x>
+      <y>420</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -173,8 +173,8 @@
    <widget class="QPushButton" name="pushButton_start">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>370</y>
+      <x>400</x>
+      <y>420</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -183,13 +183,59 @@
      <string>Start</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="lineEdit_find_time">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>500</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>400</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Time for task:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>470</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Time to find:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_task_time">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>430</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>753</width>
      <height>36</height>
     </rect>
    </property>
