--- a/algorytmy i str danyh/labs/lab 10/ASD_lab10/mainwindow.ui
+++ b/algorytmy i str danyh/labs/lab 10/ASD_lab10/mainwindow.ui
@@ -87,6 +87,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
@@ -109,6 +112,9 @@
       <width>121</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
@@ -146,6 +152,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_word_idx">
     <property name="geometry">
@@ -155,6 +164,9 @@
       <width>121</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_clear">
@@ -192,6 +204,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
@@ -228,6 +243,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -236,7 +254,7 @@
      <x>0</x>
      <y>0</y>
      <width>753</width>
-     <height>36</height>
+     <height>31</height>
     </rect>
    </property>
   </widget>
