--- a/kursova/code/OOP_kursova/mainwindow.ui
+++ b/kursova/code/OOP_kursova/mainwindow.ui
@@ -28,7 +28,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Data base</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QStackedWidget" name="stackedWidget">
