--- a/PVI/lab1/project/chess.css
+++ b/PVI/lab1/project/chess.css
@@ -63,12 +63,12 @@ a:hover {
 }
 
 .Form {
-    border: 3px solid #f1f1f1;
-    border-radius: 10px;
-    max-width: 300px;
-    margin-left: 25px;
-    margin-top: 15px;
-    margin-bottom: 40px;
+    display: none;
+    position: absolute;
+    background-color: white;
+    z-index: 4;
+    width: 98%;
+    height: 90%;
 }
 
 .openForm {
@@ -84,8 +84,17 @@ a:hover {
 }
 
 .registration {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-left: 25px;
+    margin-top: 15px;
+    margin-bottom: 40px;
     max-width: 300px;
     padding: 15px;
+    border: 3px solid #f1f1f1;
+    border-radius: 10px;
     background-color: white
 }
 
@@ -134,4 +143,15 @@ div.cell{
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+a.link{
+    display: block;
+    border: 2px solid black;
+    border-radius: 3px;
+    margin-top: 10px;
+    margin-left: 24px;
+    width: 150px;
+    height: 35px;
+    background-color: #4CAF50;
 }
